// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityWrapper data should return data converted to plain deflated object 1`] = `
Object {
  "active": false,
  "address": Object {
    "city": "Nairobi",
    "landmarks": Array [
      "Near historical monument",
    ],
    "street": "Some street",
  },
  "count": 100,
  "image": Object {
    "downloadUrl": "download",
    "mimeType": "image/jpeg",
    "ref": "file1",
  },
  "lastSeen": 2018-11-22T09:19:33.885Z,
  "misc": Array [
    Object {
      "downloadUrl": "download2",
      "mimeType": "application/pdf",
      "ref": "file2",
    },
    223.45,
    Object {
      "foo": "bar",
    },
  ],
  "title": "My Title",
}
`;

exports[`EntityWrapper field should return the raw field (list of landmarks) 1`] = `
Object {
  "label": "Landmarks",
  "name": "landmarks",
  "type": "list",
  "value": Array [
    Object {
      "type": "text",
      "value": "Near historical monument",
    },
  ],
}
`;

exports[`EntityWrapper field when a default is provided should return the true (list of landmarks) field if the the path is matched 1`] = `
Object {
  "label": "Landmarks",
  "name": "landmarks",
  "type": "list",
  "value": Array [
    Object {
      "type": "text",
      "value": "Near historical monument",
    },
  ],
}
`;

exports[`EntityWrapper value when path is provided should convert the field to plain object using util.deflateValue 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "text",
        "value": "Near historical monument",
      },
    ],
    "list",
  ],
]
`;

exports[`EntityWrapper value when path is provided should find the field using util.walkEntityPath on the raw entity 1`] = `
Array [
  Array [
    Object {
      "_id": "entity1",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "user1",
        "type": "user",
      },
      "data": Object {
        "active": Object {
          "label": "Active",
          "name": "active",
          "type": "boolean",
          "value": false,
        },
        "address": Object {
          "label": "Address",
          "name": "address",
          "type": "object",
          "value": Object {
            "city": Object {
              "label": "City",
              "name": "city",
              "type": "text",
              "value": "Nairobi",
            },
            "landmarks": Object {
              "label": "Landmarks",
              "name": "landmarks",
              "type": "list",
              "value": Array [
                Object {
                  "type": "text",
                  "value": "Near historical monument",
                },
              ],
            },
            "street": Object {
              "label": "Street",
              "name": "street",
              "type": "text",
              "value": "Some street",
            },
          },
        },
        "count": Object {
          "label": "Count",
          "name": "count",
          "type": "number",
          "value": "100",
        },
        "image": Object {
          "label": "Image",
          "name": "image",
          "type": "file",
          "value": Object {
            "downloadUrl": "download",
            "mimeType": "image/jpeg",
            "ref": "file1",
          },
        },
        "lastSeen": Object {
          "label": "Last seen",
          "name": "lastSeen",
          "type": "datetime",
          "value": "2018-11-22T09:19:33.885Z",
        },
        "misc": Object {
          "label": "Misc",
          "name": "misc",
          "type": "list",
          "value": Array [
            Object {
              "type": "file",
              "value": Object {
                "downloadUrl": "download2",
                "mimeType": "application/pdf",
                "ref": "file2",
              },
            },
            Object {
              "type": "number",
              "value": "223.45",
            },
            Object {
              "type": "object",
              "value": Object {
                "foo": Object {
                  "label": "Foo",
                  "name": "foo",
                  "type": "text",
                  "value": "bar",
                },
              },
            },
          ],
        },
        "title": Object {
          "label": "Title",
          "name": "title",
          "type": "text",
          "value": "My Title",
        },
      },
      "tags": Array [
        "posts",
        "stuff",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
    },
    Array [
      "address",
      "landmarks",
    ],
  ],
]
`;

exports[`EntityWrapper value when path is provided should return the deflated plain value 1`] = `
Array [
  "Near historical monument",
]
`;

exports[`EntityWrapper value when string path is provided should return the same result as with an array path 1`] = `
Array [
  "Near historical monument",
]
`;
